# HackerRank

./: CMakeLists.txt
Attribute_Parser/: CMakeLists.txt  main.cpp
Attribute_Parser/lib/: CMakeLists.txt
Attribute_Parser/lib/include/: file_reader.hpp  parser.hpp  query.hpp  query_handler.hpp  query_state.hpp  tag.hpp  tag_handler.hpp  tag_state.hpp
Attribute_Parser/lib/src/: file_reader.cpp  parser.cpp  query.cpp  query_state.cpp  tag.cpp  tag_state.cpp
Attribute_Parser_CP/: CMakeLists.txt  main.cpp
Virtual_Functions/: main.cpp
